fix: truncate line classes

--- a/assets/less/tailwindless/mixins/typography.less
+++ b/assets/less/tailwindless/mixins/typography.less
@@ -1,5 +1,5 @@
 .truncate-line(@line, @lineHeight: 1.5, @namePrefix: ~'', @hover: false) {
-  .truncate-@{line} {
+  .@{namePrefix}truncate-@{line} {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     overflow: hidden !important;
